--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A React-based developer portfolio",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+   "dev": "vite --port 3003",
+  "build": "vite build",
+  "serve": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -18,16 +18,17 @@
     "react-router-dom": "^6.27.0",
     "sass": "^1.80.4",
     "validator": "^13.12.0",
-    "vite": "^5.4.10",
     "workbox-core": "^7.1.0",
     "workbox-precaching": "^7.1.0",
     "workbox-routing": "^7.1.0",
     "workbox-strategies": "^7.1.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.11.0",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "vite": "^5.4.10"
   }
 }
